# midas-journal-855

Source/: CMakeLists.txt  ldffd.cxx  ldffd_strain.cxx  tdffd.cxx  tdffd_strain.cxx
Source/include/ldffd/: BSplineDeformableTransformOpt.h  BSplineDeformableTransformOpt.txx  BSplineTransformSquareRoot.h  itkBSplineInterpolationWeightFunctionDerivative.txx  itkDiffeomorphicBSplineTransform.h  itkDiffeomorphicBSplineTransform.txx  itkDiffeomorphicBSplineTransformTest.cxx  itkMattesMutualInformationMultipleImages.h  itkMattesMutualInformationMultipleImages.txx  itkTransformChain.h  itkTransformChain.txx  regFFDSplit.h
Source/include/tdffd/: itkBSplineInterpolationWeightFunctionSecondDerivative.h  itkBSplineInterpolationWeightFunctionSecondDerivative.txx  itkBSplineSecondDerivativeKernelFunction.h  regBSplineField.h  regBSplineField.txx  regBSplineFieldRefine.h  regBSplineFieldRefine.txx  regContinuousBSplineTransform.h  regContinuousBSplineTransform.txx  regDiffeomorphicContinuousBSplineTransform.h  regDiffeomorphicContinuousBSplineTransform.txx  regHybridSeqNonSeqMetric.h  regMeanSquaresTemporalImageMetric.h  regMeanSquaresTemporalImageMetric.txx  regMeanSquaresTemporalImageMetricBase.h  regMeanSquaresTemporalImageMetricBase.txx  regMeanSquaresTemporalImageMetricDense.h  regMeanSquaresTemporalImageMetricDense.txx  regMeanSquaresTemporalImageMetricSequential2.h  regMeanSquaresTemporalImageMetricSequential2.txx  regTemporalImageMetric.h  regTemporalImageMetric.txx  regTimeDiffeomorphicTransform.h  regTimeDiffeomorphicTransform.txx  regTransformWrapper.h
Source/include/utils/: DataWrappers.h  itkBSplineInterpolationWeightFunctionDerivative.h  itkTransformToDeformationFieldFilter.h  itkTransformToDeformationFieldFilter.txx  regDeformPolyDataFilterTDFFD.h  regStrainComputationFilter.h
Source/src/: regDeformPolyDataFilterTDFFD.cxx  regStrainComputationFilter.cxx
